[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cellar-door-langchain"
version = "0.1.0"
description = "LangChain callback handler for EXIT Protocol departure markers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Cellar Door", email = "hawthornhollows@gmail.com" },
]
keywords = [
    "exit-protocol",
    "langchain",
    "ai-agents",
    "departure-records",
    "callback-handler",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "cellar-door-exit>=0.1.0",
    "langchain-core>=0.2.0",
]

[project.urls]
Homepage = "https://cellar-door.dev"
Repository = "https://github.com/CellarDoorExits/langchain-python"
Issues = "https://github.com/CellarDoorExits/langchain-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cellar_door_langchain"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.10"
strict = true
